; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/sgi-ip22/extr_ip22-mc.c_get_bank_addr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/sgi-ip22/extr_ip22-mc.c_get_bank_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@SGIMC_MCONFIG_BASEADDR = common dso_local global i32 0, align 4
@sgimc = common dso_local global %struct.TYPE_2__* null, align 8
@SGIMC_SYSID_MASKREV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @get_bank_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_bank_addr(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @SGIMC_MCONFIG_BASEADDR, align 4
  %5 = and i32 %3, %4
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sgimc, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @SGIMC_SYSID_MASKREV, align 4
  %10 = and i32 %8, %9
  %11 = icmp sge i32 %10, 5
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i32 24, i32 22
  %14 = shl i32 %5, %13
  %15 = zext i32 %14 to i64
  ret i64 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
